 - implement multiple fees for different participants (goffy)
 - removed unused tpl (goffy)
 - add year to identifier (goffy)
 - fixed bug with redirect to questions (goffy)
 - added cat selection with buttons (goffy)
 - fixed bug with groups (goffy)
 - optional identifier (goffy)
 - added goto form in simplecalendar (goffy)
 - fixed bug with missing limit (goffy)

==============================================================
1.0.3 RC1 [2022/07/10]
==============================================================
 - implemented google maps in calendar and list view (goffy)
 - implemented import for apcal (goffy)
 - implemented import for extcal (goffy)
 - implemented group permissions (goffy)
 - new maintenance for table registration (goffy)
 - implemented clone feature fo events (goffy)
 - adapted update due to new semantic versioning (goffy)
 - fixed bug in MigrateHelper (goffy)
 - implemented deletion of imported events (goffy)

==============================================================
1.0.2 [2022/06/17]
==============================================================
 - added paid amount (goffy)
 - added ajax support for most used functions (goffy)
 - added history lists (registrations, answers) in admin area (goffy)
 - implemented tablesorter in list of registrations (goffy)
 - fixed bug in blocks (cronywell/goffy)
 - implemented mail handling by task list (goffy)
 - implemented cron job (goffy)

==============================================================
1.0.1 [2022/01/31]
==============================================================
 - removed field prefix (mamba/goffy)
 - removed table name from functions (mamba/goffy)
 - usage of singular table names (mamba/goffy)
 - updated mail notification system (goffy)
 - added verification for registrations (goffy)
 - added js in account form (goffy)
 - modification of textblock usage (goffy)
 - added tablesorter (mamba)
 - added notify all participants (goffy)
 - added google maps (goffy)